Allow all raw index config in star-tree index